--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.76</version>
     </dependency>
+    <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>servlet-api-2.5</artifactId>
+      <version>6.1.7</version>
+    </dependency>
   </dependencies>
 
   <build>
