--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,21 @@
       <version>1.2.76</version>
     </dependency>
     <dependency>
-      <groupId>org.mortbay.jetty</groupId>
+    <groupId>org.mortbay.jetty</groupId>
       <artifactId>servlet-api-2.5</artifactId>
       <version>6.1.7</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>equinoxSDK381</groupId>
+      <artifactId>javax.servlet</artifactId>
+      <version>7.0.50</version>
     </dependency>
   </dependencies>
 
